Change app styles

--- a/PropertyAgencyMobileApp/AppShell.xaml
+++ b/PropertyAgencyMobileApp/AppShell.xaml
@@ -16,7 +16,7 @@
                 <Setter Property="Shell.ForegroundColor"
                         Value="White" />
                 <Setter Property="Shell.TitleColor"
-                        Value="White" />
+                        Value="Black" />
                 <Setter Property="Shell.DisabledColor"
                         Value="#B4FFFFFF" />
                 <Setter Property="Shell.UnselectedColor"
