--- a/PropertyAgencyMobileApp/Views/NewItemPage.xaml
+++ b/PropertyAgencyMobileApp/Views/NewItemPage.xaml
@@ -2,34 +2,55 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PropertyAgencyMobileApp.Views.NewItemPage"
-             Shell.PresentationMode="ModalAnimated"
              Title="New Item"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              xmlns:viewmodels="clr-namespace:PropertyAgencyMobileApp.ViewModels"
              x:DataType="viewmodels:NewItemViewModel"
              ios:Page.UseSafeArea="true">
     <ContentPage.Content>
-        <StackLayout Spacing="3"
-                     Padding="15">
-            <Label Text="Text"
-                   FontSize="Medium" />
-            <Entry Text="{Binding CurrentEvent.comment, Mode=TwoWay}"
-                   FontSize="Medium" />
-            <Label Text="Description"
-                   FontSize="Medium" />
-            <Editor Text="{Binding CurrentEvent.duration, Mode=TwoWay}"
-                    AutoSize="TextChanges"
-                    FontSize="Medium"
-                    Margin="0" />
-            <StackLayout Orientation="Horizontal">
-                <Button Text="Cancel"
-                        Command="{Binding CancelCommand}"
-                        HorizontalOptions="FillAndExpand"></Button>
-                <Button Text="Save"
-                        Command="{Binding SaveCommand}"
-                        HorizontalOptions="FillAndExpand"></Button>
+        <Grid>
+            <Image Source="logo.png"
+                   VerticalOptions="Center"
+                   HorizontalOptions="Center"
+                   Opacity=".1"></Image>
+            <StackLayout Spacing="3"
+                         Padding="15">
+                <Label Text="Event date"
+                       FontSize="Medium" />
+                <DatePicker Date="{Binding EventDate, Mode=TwoWay}"
+                            FontSize="Medium" />
+                <Label Text="Event time"
+                       FontSize="Medium" />
+                <TimePicker Time="{Binding EventTime, Mode=TwoWay}"
+                            FontSize="Medium" />
+                <Label Text="Duration in minutes (can skip)"
+                       FontSize="Medium" />
+                <Entry Keyboard="Numeric"
+                       Text="{Binding DurationInMinutes}"
+                       Placeholder="Enter duration in minutes"></Entry>
+                <Label Text="Event type"
+                       FontSize="Medium" />
+                <Picker ItemsSource="{Binding EventTypes}"
+                        SelectedItem="{Binding CurrentEventType}"
+                        ItemDisplayBinding="{Binding Key}">
+                </Picker>
+                <Label Text="Comment (can skip)"
+                       FontSize="Medium" />
+                <Editor Text="{Binding Comment, Mode=TwoWay}"
+                        AutoSize="TextChanges"
+                        FontSize="Medium"
+                        Margin="0"
+                        Placeholder="Enter comment" />
+                <StackLayout Orientation="Horizontal">
+                    <Button Text="Cancel"
+                            Command="{Binding CancelCommand}"
+                            HorizontalOptions="FillAndExpand"></Button>
+                    <Button Text="Save"
+                            Command="{Binding SaveCommand}"
+                            HorizontalOptions="FillAndExpand"></Button>
+                </StackLayout>
             </StackLayout>
-        </StackLayout>
+        </Grid>
     </ContentPage.Content>
 
 </ContentPage>
