--- a/PropertyAgencyMobileApp/Views/ItemsPage.xaml
+++ b/PropertyAgencyMobileApp/Views/ItemsPage.xaml
@@ -84,7 +84,8 @@
                                             CommandParameter="{Binding .}"
                                             Command="{Binding Source={RelativeSource AncestorType={x:Type local:ItemsViewModel}},
                                                           Path=CancelEvent}"
-                                            Text="Cancel"></Button>
+                                            Text="Cancel"
+                                            TextColor="Black"></Button>
                                 </StackLayout>
                             </Frame>
                         </StackLayout>
